Fix scrollbar colors

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -18,7 +18,7 @@ body {
 }
 
 .dark *::-webkit-scrollbar-track {
-  background-color: theme('colors.cs-dark.800');
+  background-color: theme('colors.cs-dark.700');
 }
 
 // Scroll bar indicator
@@ -31,7 +31,7 @@ body {
 }
 
 .dark *::-webkit-scrollbar-thumb {
-  background-color: theme('colors.cs-dark.700');
+  background-color: theme('colors.cs-dark.600');
   border-color: #ffffff;
 }
 
